# jackpot

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Dockerfile.alpine  README  README.md
doc/: CMakeLists.txt  attacks.txt  client.conf  jackpot.1  jackpot.conf  jackpot.conf.5  page.html  rootfs.sh  sample.cert  sample.key  server.conf  users.lst
src/: CMakeLists.txt  buffer.cpp  buffer.h  client.cpp  client.h  conf.cpp  conf.h  config.h  config.h.in  cpio.cpp  cpio.h  ctxwrapper.cpp  ctxwrapper.h  main.cpp  server.cpp  server.h  sock.cpp  sock.h  socks.cpp  socks.h  socks5.cpp  socks5.h  tls.cpp  tls.h  utils.cpp  utils.h  websrv.cpp  websrv.h  websv.cpp  websv.h
