cmake_minimum_required(VERSION 2.6)
set(CMAKE_INSTALL_SYSCONFDIR "/etc")
install(FILES server.conf DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/jackpot.d)
install(FILES client.conf DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/jackpot.d)
set(CMAKE_INSTALL_DATADIR "/usr/share")
install(FILES jackpot.1 DESTINATION ${CMAKE_INSTALL_DATADIR}/man/man1)
install(FILES page.html users.lst DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/jackpot)
